--- a/about.html
+++ b/about.html
@@ -17,29 +17,49 @@
         <header class="header">
             <div class="container">
     <div class="header__inner">
+        <button class="burger">
+            <svg width="16" height="12" viewBox="0 0 16 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M1 1H15M1 6H15M1 11H15" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+        </button>
         <div class="header__left">
             <a href="" class="header__logo">
-                <img src="img/logo.svg" alt="">
+                <img src="img/logo2.svg" alt="">
             </a>
-            <div class="header__desc">
-                <div class="text15">
-                    Life changing getaway
+        </div>
+        <div class="menu">
+            <div class="menu__top">
+                <button class="menu__close">
+                    <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M11 1L1 11M1 1L11 11" stroke="#1D1D1B" stroke-width="1.4" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                </button>
+                <div class="menu__top-right">
+                    <a href="" class="header-contacts__phone">
+                        <img src="img/whatsapp.svg" alt="">
+                    </a>
+                    <a href="" class="header-contacts__whatsapp">
+                        <img src="img/whatsapp2.svg" alt="">
+                    </a>
+                    <button class="menu__btn m-btn m-btn-pink">
+                        <span class="m-btn__inner">
+                            <span>Quick chat with us</span>
+                        </span>
+                    </button>
                 </div>
             </div>
+            <nav class="nav">
+                <a href="" class="nav__link _active">
+                    <span>About Us</span>
+                </a>
+                <a href="" class="nav__link">
+                    <span>Blog</span>
+                </a>
+                <a href="" class="nav__link">
+                    <span>Contacts</span>
+                </a>
+            </nav>
         </div>
-        
-        <nav class="nav">
-            <a href="" class="nav__link _active">
-                <span>About Us</span>
-            </a>
-            <a href="" class="nav__link">
-                <span>Blog</span>
-            </a>
-            <a href="" class="nav__link">
-                <span>Contacts</span>
-            </a>
-        </nav>
-        
         <div class="header__right">
             <div class="header-contacts">
                 <a href="" class="header-contacts__phone">
@@ -51,7 +71,7 @@
                     <span>Contact us in WhatsApp</span>
                 </a>
             </div>
-            <button class="header__btn m-btn m-btn-pink">
+            <button class="header__btn _blue m-btn m-btn-pink">
                 <span class="m-btn__inner">
                     <span>Quick chat with us</span>
                 </span>
@@ -79,61 +99,55 @@
                             </div>
                         </div>
                         <svg class="about-main__gradients" width="1440" height="627" viewBox="0 0 1440 627" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <mask id="mask0_185_184" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="1440" height="627">
+                            <rect width="1440" height="627" fill="#E4FAFD" fill-opacity="0.75"/>
+                            <rect width="1440" height="627" fill="#1B3140"/>
+                            <mask id="mask0_1_24" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="1440" height="627">
                                 <rect width="1440" height="627" fill="#E4FAFD" fill-opacity="0.9"/>
                             </mask>
-                            <g mask="url(#mask0_185_184)">
-                                <g opacity="0.6" filter="url(#filter0_f_185_184)">
-                                    <circle cx="1038" cy="149" r="340" fill="url(#paint0_radial_185_184)"/>
+                            <g mask="url(#mask0_1_24)">
+                                <g opacity="0.6" filter="url(#filter0_f_1_24)">
+                                    <circle cx="1038" cy="149" r="340" fill="url(#paint0_radial_1_24)"/>
                                 </g>
-                                <g filter="url(#filter1_f_185_184)">
-                                    <circle cx="847.5" cy="511.5" r="447.5" fill="url(#paint1_radial_185_184)"/>
+                                <g filter="url(#filter1_f_1_24)">
+                                    <circle cx="816.5" cy="638.5" r="520.5" fill="#0DD2FD"/>
                                 </g>
-                                <g opacity="0.3" filter="url(#filter2_f_185_184)">
-                                    <circle cx="399" cy="578" r="306" fill="url(#paint2_radial_185_184)"/>
+                                <g opacity="0.3" filter="url(#filter2_f_1_24)">
+                                    <circle cx="399" cy="578" r="306" fill="url(#paint1_radial_1_24)"/>
                                 </g>
-                                <g filter="url(#filter3_f_185_184)">
-                                    <circle cx="1280.5" cy="408.5" r="447.5" fill="url(#paint3_radial_185_184)"/>
+                                <g filter="url(#filter3_f_1_24)">
+                                    <circle cx="1280.5" cy="408.5" r="447.5" fill="#FB03D4"/>
                                 </g>
                             </g>
                             <defs>
-                                <filter id="filter0_f_185_184" x="397" y="-492" width="1282" height="1282" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                                <filter id="filter0_f_1_24" x="397" y="-492" width="1282" height="1282" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
                                     <feFlood flood-opacity="0" result="BackgroundImageFix"/>
                                     <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape"/>
-                                    <feGaussianBlur stdDeviation="150.5" result="effect1_foregroundBlur_185_184"/>
+                                    <feGaussianBlur stdDeviation="150.5" result="effect1_foregroundBlur_1_24"/>
                                 </filter>
-                                <filter id="filter1_f_185_184" x="389" y="53" width="917" height="917" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                                <filter id="filter1_f_1_24" x="-254" y="-432" width="2141" height="2141" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
                                     <feFlood flood-opacity="0" result="BackgroundImageFix"/>
                                     <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape"/>
-                                    <feGaussianBlur stdDeviation="5.5" result="effect1_foregroundBlur_185_184"/>
+                                    <feGaussianBlur stdDeviation="275" result="effect1_foregroundBlur_1_24"/>
                                 </filter>
-                                <filter id="filter2_f_185_184" x="-207" y="-28" width="1212" height="1212" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                                <filter id="filter2_f_1_24" x="-207" y="-28" width="1212" height="1212" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
                                     <feFlood flood-opacity="0" result="BackgroundImageFix"/>
                                     <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape"/>
-                                    <feGaussianBlur stdDeviation="150" result="effect1_foregroundBlur_185_184"/>
+                                    <feGaussianBlur stdDeviation="150" result="effect1_foregroundBlur_1_24"/>
                                 </filter>
-                                <filter id="filter3_f_185_184" x="822" y="-50" width="917" height="917" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                                <filter id="filter3_f_1_24" x="283" y="-589" width="1995" height="1995" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
                                     <feFlood flood-opacity="0" result="BackgroundImageFix"/>
                                     <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape"/>
-                                    <feGaussianBlur stdDeviation="5.5" result="effect1_foregroundBlur_185_184"/>
+                                    <feGaussianBlur stdDeviation="275" result="effect1_foregroundBlur_1_24"/>
                                 </filter>
-                                <radialGradient id="paint0_radial_185_184" cx="0" cy="0" r="1" gradientUnits="userSpaceOnUse" gradientTransform="translate(1038 149) rotate(90) scale(340)">
+                                <radialGradient id="paint0_radial_1_24" cx="0" cy="0" r="1" gradientUnits="userSpaceOnUse" gradientTransform="translate(1038 149) rotate(90) scale(340)">
                                     <stop stop-color="#FF365F">
-                                        <animate attributeName="stop-color" values="#7A5FFF; #FF64C3; #7A5FFF" dur="2.5s" repeatCount="indefinite"></animate>
+                                        <animate attributeName="stop-color" values="#FF365F; #FF64C3; #FF365F" dur="2.5s" repeatCount="indefinite"></animate>
                                     </stop>
                                     <stop offset="1" stop-color="#FF3661" stop-opacity="0">
-                                        <animate attributeName="stop-color" values="#01FF89; #FF64C3; #01FF89" dur="2.5s" repeatCount="indefinite"></animate>
+                                        <animate attributeName="stop-color" values="#FF3661; #FF64C3; #FF3661" dur="2.5s" repeatCount="indefinite"></animate>
                                     </stop>
                                 </radialGradient>
-                                <radialGradient id="paint1_radial_185_184" cx="0" cy="0" r="1" gradientUnits="userSpaceOnUse" gradientTransform="translate(847.5 511.5) rotate(90) scale(447.5)">
-                                    <stop stop-color="#5BECF1">
-                                        <animate attributeName="stop-color" values="#01FF89; #FF64C3; #01FF89" dur="2.5s" repeatCount="indefinite"></animate>
-                                    </stop>
-                                    <stop offset="1" stop-color="#5BECF1" stop-opacity="0">
-                                        <animate attributeName="stop-color" values="#7A5FFF; #FF64C3; #7A5FFF" dur="2.5s" repeatCount="indefinite"></animate>
-                                    </stop>
-                                </radialGradient>
-                                <radialGradient id="paint2_radial_185_184" cx="0" cy="0" r="1" gradientUnits="userSpaceOnUse" gradientTransform="translate(399 578) rotate(90) scale(306)">
+                                <radialGradient id="paint1_radial_1_24" cx="0" cy="0" r="1" gradientUnits="userSpaceOnUse" gradientTransform="translate(399 578) rotate(90) scale(306)">
                                     <stop stop-color="#1470DB">
                                         <animate attributeName="stop-color" values="#7A5FFF; #FF64C3; #7A5FFF" dur="2.5s" repeatCount="indefinite"></animate>
                                     </stop>
@@ -141,12 +155,9 @@
                                         <animate attributeName="stop-color" values="#7A5FFF; #FF64C3; #7A5FFF" dur="2.5s" repeatCount="indefinite"></animate>
                                     </stop>
                                 </radialGradient>
-                                <radialGradient id="paint3_radial_185_184" cx="0" cy="0" r="1" gradientUnits="userSpaceOnUse" gradientTransform="translate(1280.5 408.5) rotate(90) scale(447.5)">
-                                    <stop stop-color="#FF64C3"/>
-                                    <stop offset="1" stop-color="#FF64C3" stop-opacity="0"/>
-                                </radialGradient>
                             </defs>
                         </svg>
+
                     </div>
                     <img src="img/about-bg4.png" alt="" class="about-main__img _desktop">
                     <img src="img/about-bg5.png" alt="" class="about-main__img _mob">
