--- a/contacts.html
+++ b/contacts.html
@@ -17,29 +17,49 @@
         <header class="header">
             <div class="container">
     <div class="header__inner">
+        <button class="burger">
+            <svg width="16" height="12" viewBox="0 0 16 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M1 1H15M1 6H15M1 11H15" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+        </button>
         <div class="header__left">
             <a href="" class="header__logo">
-                <img src="img/logo.svg" alt="">
+                <img src="img/logo2.svg" alt="">
             </a>
-            <div class="header__desc">
-                <div class="text15">
-                    Life changing getaway
+        </div>
+        <div class="menu">
+            <div class="menu__top">
+                <button class="menu__close">
+                    <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M11 1L1 11M1 1L11 11" stroke="#1D1D1B" stroke-width="1.4" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                </button>
+                <div class="menu__top-right">
+                    <a href="" class="header-contacts__phone">
+                        <img src="img/whatsapp.svg" alt="">
+                    </a>
+                    <a href="" class="header-contacts__whatsapp">
+                        <img src="img/whatsapp2.svg" alt="">
+                    </a>
+                    <button class="menu__btn m-btn m-btn-pink">
+                        <span class="m-btn__inner">
+                            <span>Quick chat with us</span>
+                        </span>
+                    </button>
                 </div>
             </div>
+            <nav class="nav">
+                <a href="" class="nav__link _active">
+                    <span>About Us</span>
+                </a>
+                <a href="" class="nav__link">
+                    <span>Blog</span>
+                </a>
+                <a href="" class="nav__link">
+                    <span>Contacts</span>
+                </a>
+            </nav>
         </div>
-        
-        <nav class="nav">
-            <a href="" class="nav__link _active">
-                <span>About Us</span>
-            </a>
-            <a href="" class="nav__link">
-                <span>Blog</span>
-            </a>
-            <a href="" class="nav__link">
-                <span>Contacts</span>
-            </a>
-        </nav>
-        
         <div class="header__right">
             <div class="header-contacts">
                 <a href="" class="header-contacts__phone">
@@ -51,7 +71,7 @@
                     <span>Contact us in WhatsApp</span>
                 </a>
             </div>
-            <button class="header__btn m-btn m-btn-pink">
+            <button class="header__btn _blue m-btn m-btn-pink">
                 <span class="m-btn__inner">
                     <span>Quick chat with us</span>
                 </span>
@@ -69,77 +89,81 @@
                         Contact Us
                     </div>
                 </div>
-                <svg class="contacts-page__bg _view1" width="1440" height="346" viewBox="0 0 1440 346" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <mask id="mask0_190_92" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="1440" height="346">
-                        <rect width="1440" height="346" fill="#E4FAFD" fill-opacity="0.75"/>
+                <svg class="contacts-page__bg _view1"  width="1440" height="346" viewBox="0 0 1440 346" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <rect width="1440" height="346" fill="#E4FAFD" fill-opacity="0.75"/>
+                    <rect width="1440" height="346" fill="#1B3140"/>
+                    <mask id="mask0_307_920" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="1440" height="346">
+                        <rect width="1440" height="346" fill="#1B3140"/>
                     </mask>
-                    <g mask="url(#mask0_190_92)">
-                        <g filter="url(#filter0_f_190_92)">
-                            <circle cx="718.5" cy="335.5" r="379.5" fill="url(#paint0_radial_190_92)"/>
+                    <g mask="url(#mask0_307_920)">
+                        <g filter="url(#filter0_f_307_920)">
+                            <circle cx="851.5" cy="387.5" r="379.5" fill="#00DCFF"/>
                         </g>
-                        <g filter="url(#filter1_f_190_92)">
-                            <circle cx="1215.5" cy="500.5" r="379.5" fill="url(#paint1_radial_190_92)"/>
+                        <g filter="url(#filter1_f_307_920)">
+                            <circle cx="1376.5" cy="428.5" r="379.5" fill="#FD01D4"/>
                         </g>
                     </g>
                     <defs>
-                        <filter id="filter0_f_190_92" x="139" y="-244" width="1159" height="1159" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                        <filter id="filter0_f_307_920" x="22" y="-442" width="1659" height="1659" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
                             <feFlood flood-opacity="0" result="BackgroundImageFix"/>
                             <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape"/>
-                            <feGaussianBlur stdDeviation="100" result="effect1_foregroundBlur_190_92"/>
+                            <feGaussianBlur stdDeviation="225" result="effect1_foregroundBlur_307_920"/>
                         </filter>
-                        <filter id="filter1_f_190_92" x="636" y="-79" width="1159" height="1159" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                        <filter id="filter1_f_307_920" x="547" y="-401" width="1659" height="1659" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
                             <feFlood flood-opacity="0" result="BackgroundImageFix"/>
                             <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape"/>
-                            <feGaussianBlur stdDeviation="100" result="effect1_foregroundBlur_190_92"/>
+                            <feGaussianBlur stdDeviation="225" result="effect1_foregroundBlur_307_920"/>
                         </filter>
-                        <radialGradient id="paint0_radial_190_92" cx="0" cy="0" r="1" gradientUnits="userSpaceOnUse" gradientTransform="translate(718.5 335.5) rotate(90) scale(379.5)">
-                            <stop stop-color="#5BECF1">
-                                <animate attributeName="stop-color" values="#7A5FFF; #E93072; #7A5FFF" dur="4.5s" repeatCount="indefinite"></animate>
-                            </stop>
-                            <stop offset="1" stop-color="#5BECF1" stop-opacity="0">
-                                <animate attributeName="stop-color" values="#E93072; #7A5FFF; #E93072" dur="4.5s" repeatCount="indefinite"></animate>
-                            </stop>
-                        </radialGradient>
-                        <radialGradient id="paint1_radial_190_92" cx="0" cy="0" r="1" gradientUnits="userSpaceOnUse" gradientTransform="translate(1215.5 500.5) rotate(90) scale(379.5)">
-                            <stop stop-color="#FF64C3">
-                                <animate attributeName="stop-color" values="#FF64C3; #FF64C3; #FF64C3" dur="3.5s" repeatCount="indefinite"></animate>
-                            </stop>
-                            <stop offset="1" stop-color="#FF64C3" stop-opacity="0">
-                                <animate attributeName="stop-color" values="#FF64C3; #FF64C3; #FF64C3" dur="3.5s" repeatCount="indefinite"></animate>
-                            </stop>
-                        </radialGradient>
                     </defs>
                 </svg>
-                <svg class="contacts-page__bg _view2" width="1440" height="346" viewBox="0 0 1440 346" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <mask id="mask0_190_92" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="1440" height="346">
-                        <rect width="1440" height="346" fill="#E4FAFD" fill-opacity="0.75"/>
+
+                <svg class="contacts-page__bg _view2" width="320" height="249" viewBox="0 0 320 249" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <rect y="-66" width="320" height="315" fill="#1B3140"/>
+                    <mask id="mask0_2_26" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="-102" width="320" height="351">
+                        <rect y="-102" width="320" height="351" fill="#E4FAFD"/>
                     </mask>
-                    <g mask="url(#mask0_190_92)">
-                        <g filter="url(#filter0_f_190_92)">
-                            <circle cx="718.5" cy="335.5" r="379.5" fill="url(#paint0_radial_190_92)"/>
+                    <g mask="url(#mask0_2_26)">
+                        <g opacity="0.6" filter="url(#filter0_f_2_26)">
+                            <circle cx="447" cy="-13" r="225" fill="url(#paint0_radial_2_26)"/>
                         </g>
-                        <g filter="url(#filter1_f_190_92)">
-                            <circle cx="1215.5" cy="500.5" r="379.5" fill="url(#paint1_radial_190_92)"/>
+                        <g filter="url(#filter1_f_2_26)">
+                            <circle cx="166" cy="366" r="275" fill="#0DD2FD"/>
+                        </g>
+                        <g opacity="0.3" filter="url(#filter2_f_2_26)">
+                            <circle cx="99.5" cy="270.5" r="127.5" fill="url(#paint1_radial_2_26)"/>
+                        </g>
+                        <g filter="url(#filter3_f_2_26)">
+                            <ellipse cx="287" cy="95.5" rx="184" ry="183.5" fill="#FB03D4"/>
                         </g>
                     </g>
                     <defs>
-                        <filter id="filter0_f_190_92" x="139" y="-244" width="1159" height="1159" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                        <filter id="filter0_f_2_26" x="-79" y="-539" width="1052" height="1052" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
                             <feFlood flood-opacity="0" result="BackgroundImageFix"/>
                             <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape"/>
-                            <feGaussianBlur stdDeviation="100" result="effect1_foregroundBlur_190_92"/>
+                            <feGaussianBlur stdDeviation="150.5" result="effect1_foregroundBlur_2_26"/>
                         </filter>
-                        <filter id="filter1_f_190_92" x="636" y="-79" width="1159" height="1159" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                        <filter id="filter1_f_2_26" x="-409" y="-209" width="1150" height="1150" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
                             <feFlood flood-opacity="0" result="BackgroundImageFix"/>
                             <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape"/>
-                            <feGaussianBlur stdDeviation="100" result="effect1_foregroundBlur_190_92"/>
+                            <feGaussianBlur stdDeviation="150" result="effect1_foregroundBlur_2_26"/>
                         </filter>
-                        <radialGradient id="paint0_radial_190_92" cx="0" cy="0" r="1" gradientUnits="userSpaceOnUse" gradientTransform="translate(718.5 335.5) rotate(90) scale(379.5)">
-                            <stop stop-color="#5BECF1"/>
-                            <stop offset="1" stop-color="#5BECF1" stop-opacity="0"/>
+                        <filter id="filter2_f_2_26" x="-178" y="-7" width="555" height="555" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                            <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+                            <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape"/>
+                            <feGaussianBlur stdDeviation="75" result="effect1_foregroundBlur_2_26"/>
+                        </filter>
+                        <filter id="filter3_f_2_26" x="-247" y="-438" width="1068" height="1067" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                            <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+                            <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape"/>
+                            <feGaussianBlur stdDeviation="175" result="effect1_foregroundBlur_2_26"/>
+                        </filter>
+                        <radialGradient id="paint0_radial_2_26" cx="0" cy="0" r="1" gradientUnits="userSpaceOnUse" gradientTransform="translate(447 -13) rotate(90) scale(225)">
+                            <stop stop-color="#FF365F"/>
+                            <stop offset="1" stop-color="#FF3661" stop-opacity="0"/>
                         </radialGradient>
-                        <radialGradient id="paint1_radial_190_92" cx="0" cy="0" r="1" gradientUnits="userSpaceOnUse" gradientTransform="translate(1215.5 500.5) rotate(90) scale(379.5)">
-                            <stop stop-color="#FF64C3"/>
-                            <stop offset="1" stop-color="#FF64C3" stop-opacity="0"/>
+                        <radialGradient id="paint1_radial_2_26" cx="0" cy="0" r="1" gradientUnits="userSpaceOnUse" gradientTransform="translate(99.5 270.5) rotate(90) scale(127.5)">
+                            <stop stop-color="#1470DB"/>
+                            <stop offset="1" stop-color="#1470DB" stop-opacity="0"/>
                         </radialGradient>
                     </defs>
                 </svg>
