--- a/index.html
+++ b/index.html
@@ -14,20 +14,52 @@
 
 <body class="page index-page">
     <div class="wrapper">
-        <header class="header">
+        <header class="header _index-page">
             <div class="container">
     <div class="header__inner">
+        <button class="burger">
+            <svg width="16" height="12" viewBox="0 0 16 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M1 1H15M1 6H15M1 11H15" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+        </button>
         <div class="header__left">
             <a href="" class="header__logo">
-                <img src="img/logo.svg" alt="">
+                <img src="img/logo2.svg" alt="">
             </a>
-            <div class="header__desc">
-                <div class="text15">
-                    Life changing getaway
+        </div>
+        <div class="menu">
+            <div class="menu__top">
+                <button class="menu__close">
+                    <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M11 1L1 11M1 1L11 11" stroke="#1D1D1B" stroke-width="1.4" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                </button>
+                <div class="menu__top-right">
+                    <a href="" class="header-contacts__phone">
+                        <img src="img/whatsapp.svg" alt="">
+                    </a>
+                    <a href="" class="header-contacts__whatsapp">
+                        <img src="img/whatsapp2.svg" alt="">
+                    </a>
+                    <button class="menu__btn m-btn m-btn-pink">
+                        <span class="m-btn__inner">
+                            <span>Quick chat with us</span>
+                        </span>
+                    </button>
                 </div>
             </div>
+            <nav class="nav">
+                <a href="" class="nav__link _active">
+                    <span>About Us</span>
+                </a>
+                <a href="" class="nav__link">
+                    <span>Blog</span>
+                </a>
+                <a href="" class="nav__link">
+                    <span>Contacts</span>
+                </a>
+            </nav>
         </div>
-        
         <div class="header__right">
             <div class="header-contacts">
                 <a href="" class="header-contacts__phone">
@@ -39,7 +71,7 @@
                     <span>Contact us in WhatsApp</span>
                 </a>
             </div>
-            <button class="header__btn m-btn m-btn-pink">
+            <button class="header__btn  m-btn m-btn-pink">
                 <span class="m-btn__inner">
                     <span>Quick chat with us</span>
                 </span>
@@ -104,7 +136,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <button class="main-offer__btn m-btn m-btn-pink">
+                                    <button class="main-offer__btn m-btn m-btn-pink _blue">
                                         <span class="m-btn__inner">
                                             <span>Free Consultation</span>
                                         </span>
@@ -202,79 +234,6 @@
                     <div class="container">
                         <div class="get__wrap">
                             <div class="get__inner">
-                                <svg class="_linear-bg" width="1220" height="314" viewBox="0 0 1220 314" fill="none" xmlns="http://www.w3.org/2000/svg">
-    <rect width="1220" height="314" rx="15" fill="url(#paint0_linear_159_1742)"/>
-    <rect width="1220" height="314" rx="15" fill="url(#paint1_radial_159_1742)" fill-opacity="0.67"/>
-    <rect width="1220" height="314" rx="15" fill="url(#paint2_radial_159_1742)" fill-opacity="0.38"/>
-    <mask id="mask0_159_1742" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="1220" height="314">
-        <rect width="1220" height="314" rx="15" fill="url(#paint3_linear_159_1742)"/>
-        <rect width="1220" height="314" rx="15" fill="url(#paint4_radial_159_1742)" fill-opacity="0.67"/>
-        <rect width="1220" height="314" rx="15" fill="url(#paint5_radial_159_1742)" fill-opacity="0.38"/>
-    </mask>
-    <g mask="url(#mask0_159_1742)">
-        <g opacity="0.04">
-            <circle cx="609.442" cy="-26.1794" r="255.171" transform="rotate(-165 609.442 -26.1794)" stroke="url(#paint6_linear_159_1742)" stroke-opacity="0.91" stroke-width="95"/>
-            <circle cx="609.44" cy="-26.1808" r="386.872" transform="rotate(-165 609.44 -26.1808)" stroke="url(#paint7_linear_159_1742)" stroke-opacity="0.91" stroke-width="95"/>
-            <circle cx="609.442" cy="-26.1807" r="125.528" transform="rotate(-165 609.442 -26.1807)" stroke="url(#paint8_linear_159_1742)" stroke-opacity="0.91" stroke-width="95"/>
-        </g>
-    </g>
-    <defs>
-        <linearGradient id="paint0_linear_159_1742" x1="39" y1="314" x2="1256" y2="-1.08693e-05" gradientUnits="userSpaceOnUse">
-            <stop stop-color="#3443A1">
-                <animate attributeName="stop-color" values="#3443A1; #E93072; #3443A1" dur="3.5s" repeatCount="indefinite"></animate>
-            </stop>
-            <stop offset="0.386695" stop-color="#1C91EB">
-                <animate attributeName="stop-color" values="#1C91EB; #E93072; #1C91EB" dur="3.5s" repeatCount="indefinite"></animate>
-            </stop>
-            <stop offset="1" stop-color="#73C2EA">
-                <animate attributeName="stop-color" values="#73C2EA; #373ECF; #73C2EA" dur="3.5s" repeatCount="indefinite"></animate>
-            </stop>
-        </linearGradient>
-        <radialGradient id="paint1_radial_159_1742" cx="0" cy="0" r="1" gradientUnits="userSpaceOnUse" gradientTransform="translate(406.5 271.5) rotate(46.4783) scale(548.19 441.678)">
-            <stop stop-color="#D853FA">
-                <animate attributeName="stop-color" values="#D853FA; #373ECF; #D853FA" dur="3.5s" repeatCount="indefinite"></animate>
-            </stop>
-            <stop offset="1" stop-color="#D853FA" stop-opacity="0">
-                <animate attributeName="stop-color" values="#D853FA; #373ECF; #D853FA" dur="3.5s" repeatCount="indefinite"></animate>
-            </stop>
-        </radialGradient>
-        <radialGradient id="paint2_radial_159_1742" cx="0" cy="0" r="1" gradientUnits="userSpaceOnUse" gradientTransform="translate(-80.5 -105.5) rotate(46.8684) scale(314.476 253.374)">
-            <stop stop-color="white"/>
-            <stop offset="1" stop-color="white" stop-opacity="0"/>
-        </radialGradient>
-        <linearGradient id="paint3_linear_159_1742" x1="39" y1="314" x2="1256" y2="-1.08693e-05" gradientUnits="userSpaceOnUse">
-            <stop stop-color="#3443A1">
-                <animate attributeName="stop-color" values="#3443A1; #01FF89; #3443A1" dur="3.5s" repeatCount="indefinite"></animate>
-            </stop>
-            <stop offset="0.386695" stop-color="#1C91EB">
-                <animate attributeName="stop-color" values="#1C91EB; #01FF89; #1C91EB" dur="3.5s" repeatCount="indefinite"></animate>
-            </stop>
-            <stop offset="1" stop-color="#73C2EA">
-                <animate attributeName="stop-color" values="#73C2EA; #01FF89; #73C2EA" dur="3.5s" repeatCount="indefinite"></animate>
-            </stop>
-        </linearGradient>
-        <radialGradient id="paint4_radial_159_1742" cx="0" cy="0" r="1" gradientUnits="userSpaceOnUse" gradientTransform="translate(406.5 271.5) rotate(46.4783) scale(548.19 441.678)">
-            <stop stop-color="#D853FA"/>
-            <stop offset="1" stop-color="#D853FA" stop-opacity="0"/>
-        </radialGradient>
-        <radialGradient id="paint5_radial_159_1742" cx="0" cy="0" r="1" gradientUnits="userSpaceOnUse" gradientTransform="translate(-80.5 -105.5) rotate(46.8684) scale(314.476 253.374)">
-            <stop stop-color="white"/>
-            <stop offset="1" stop-color="white" stop-opacity="0"/>
-        </radialGradient>
-        <linearGradient id="paint6_linear_159_1742" x1="609.442" y1="-281.35" x2="609.442" y2="228.991" gradientUnits="userSpaceOnUse">
-            <stop stop-color="#F1F7F7" stop-opacity="0.83"/>
-            <stop offset="1" stop-color="#F1F7F7" stop-opacity="0.2"/>
-        </linearGradient>
-        <linearGradient id="paint7_linear_159_1742" x1="609.44" y1="-413.053" x2="609.44" y2="360.691" gradientUnits="userSpaceOnUse">
-            <stop stop-color="#F1F7F7" stop-opacity="0.83"/>
-            <stop offset="1" stop-color="#F1F7F7" stop-opacity="0.2"/>
-        </linearGradient>
-        <linearGradient id="paint8_linear_159_1742" x1="609.442" y1="-151.708" x2="609.442" y2="99.3469" gradientUnits="userSpaceOnUse">
-            <stop stop-color="#F1F7F7" stop-opacity="0.83"/>
-            <stop offset="1" stop-color="#F1F7F7" stop-opacity="0.2"/>
-        </linearGradient>
-    </defs>
-</svg>
 
                                 <div class="get__title _fade">
                                     AT THE END YOU GET
@@ -528,80 +487,6 @@
                 <section class="consult">
                     <div class="container">
                         <div class="consult__inner">
-                            <svg class="_linear-bg" width="1220" height="314" viewBox="0 0 1220 314" fill="none" xmlns="http://www.w3.org/2000/svg">
-    <rect width="1220" height="314" rx="15" fill="url(#paint0_linear_159_17422)"/>
-    <rect width="1220" height="314" rx="15" fill="url(#paint1_radial_159_17422)" fill-opacity="0.67"/>
-    <rect width="1220" height="314" rx="15" fill="url(#paint2_radial_159_17422)" fill-opacity="0.38"/>
-    <mask id="mask0_159_17422" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="1220" height="314">
-        <rect width="1220" height="314" rx="15" fill="url(#paint3_linear_159_17422)"/>
-        <rect width="1220" height="314" rx="15" fill="url(#paint4_radial_159_17422)" fill-opacity="0.67"/>
-        <rect width="1220" height="314" rx="15" fill="url(#paint5_radial_159_17422)" fill-opacity="0.38"/>
-    </mask>
-    <g mask="url(#mask0_159_17422)">
-        <g opacity="0.04">
-            <circle cx="609.442" cy="-26.1794" r="255.171" transform="rotate(-165 609.442 -26.1794)" stroke="url(#paint6_linear_159_1742)" stroke-opacity="0.91" stroke-width="95"/>
-            <circle cx="609.44" cy="-26.1808" r="386.872" transform="rotate(-165 609.44 -26.1808)" stroke="url(#paint7_linear_159_1742)" stroke-opacity="0.91" stroke-width="95"/>
-            <circle cx="609.442" cy="-26.1807" r="125.528" transform="rotate(-165 609.442 -26.1807)" stroke="url(#paint8_linear_159_1742)" stroke-opacity="0.91" stroke-width="95"/>
-        </g>
-    </g>
-    <defs>
-        <linearGradient id="paint0_linear_159_17422" x1="39" y1="314" x2="1256" y2="-1.08693e-05" gradientUnits="userSpaceOnUse">
-            <stop stop-color="#3443A1">
-                <animate attributeName="stop-color" values="#3443A1; #E93072; #3443A1" dur="3.5s" repeatCount="indefinite"></animate>
-            </stop>
-            <stop offset="0.386695" stop-color="#1C91EB">
-                <animate attributeName="stop-color" values="#1C91EB; #E93072; #1C91EB" dur="3.5s" repeatCount="indefinite"></animate>
-            </stop>
-            <stop offset="1" stop-color="#73C2EA">
-                <animate attributeName="stop-color" values="#73C2EA; #373ECF; #73C2EA" dur="3.5s" repeatCount="indefinite"></animate>
-            </stop>
-        </linearGradient>
-        <radialGradient id="paint1_radial_159_17422" cx="0" cy="0" r="1" gradientUnits="userSpaceOnUse" gradientTransform="translate(406.5 271.5) rotate(46.4783) scale(548.19 441.678)">
-            <stop stop-color="#D853FA">
-                <animate attributeName="stop-color" values="#D853FA; #373ECF; #D853FA" dur="3.5s" repeatCount="indefinite"></animate>
-            </stop>
-            <stop offset="1" stop-color="#D853FA" stop-opacity="0">
-                <animate attributeName="stop-color" values="#D853FA; #373ECF; #D853FA" dur="3.5s" repeatCount="indefinite"></animate>
-            </stop>
-        </radialGradient>
-        <radialGradient id="paint2_radial_159_17422" cx="0" cy="0" r="1" gradientUnits="userSpaceOnUse" gradientTransform="translate(-80.5 -105.5) rotate(46.8684) scale(314.476 253.374)">
-            <stop stop-color="white"/>
-            <stop offset="1" stop-color="white" stop-opacity="0"/>
-        </radialGradient>
-        <linearGradient id="paint3_linear_159_17422" x1="39" y1="314" x2="1256" y2="-1.08693e-05" gradientUnits="userSpaceOnUse">
-            <stop stop-color="#3443A1">
-                <animate attributeName="stop-color" values="#3443A1; #01FF89; #3443A1" dur="3.5s" repeatCount="indefinite"></animate>
-            </stop>
-            <stop offset="0.386695" stop-color="#1C91EB">
-                <animate attributeName="stop-color" values="#1C91EB; #01FF89; #1C91EB" dur="3.5s" repeatCount="indefinite"></animate>
-            </stop>
-            <stop offset="1" stop-color="#73C2EA">
-                <animate attributeName="stop-color" values="#73C2EA; #01FF89; #73C2EA" dur="3.5s" repeatCount="indefinite"></animate>
-            </stop>
-        </linearGradient>
-        <radialGradient id="paint4_radial_159_17422" cx="0" cy="0" r="1" gradientUnits="userSpaceOnUse" gradientTransform="translate(406.5 271.5) rotate(46.4783) scale(548.19 441.678)">
-            <stop stop-color="#D853FA"/>
-            <stop offset="1" stop-color="#D853FA" stop-opacity="0"/>
-        </radialGradient>
-        <radialGradient id="paint5_radial_159_17422" cx="0" cy="0" r="1" gradientUnits="userSpaceOnUse" gradientTransform="translate(-80.5 -105.5) rotate(46.8684) scale(314.476 253.374)">
-            <stop stop-color="white"/>
-            <stop offset="1" stop-color="white" stop-opacity="0"/>
-        </radialGradient>
-        <linearGradient id="paint6_linear_159_17422" x1="609.442" y1="-281.35" x2="609.442" y2="228.991" gradientUnits="userSpaceOnUse">
-            <stop stop-color="#F1F7F7" stop-opacity="0.83"/>
-            <stop offset="1" stop-color="#F1F7F7" stop-opacity="0.2"/>
-        </linearGradient>
-        <linearGradient id="paint7_linear_159_17422" x1="609.44" y1="-413.053" x2="609.44" y2="360.691" gradientUnits="userSpaceOnUse">
-            <stop stop-color="#F1F7F7" stop-opacity="0.83"/>
-            <stop offset="1" stop-color="#F1F7F7" stop-opacity="0.2"/>
-        </linearGradient>
-        <linearGradient id="paint8_linear_159_17422" x1="609.442" y1="-151.708" x2="609.442" y2="99.3469" gradientUnits="userSpaceOnUse">
-            <stop stop-color="#F1F7F7" stop-opacity="0.83"/>
-            <stop offset="1" stop-color="#F1F7F7" stop-opacity="0.2"/>
-        </linearGradient>
-    </defs>
-</svg>
-
                             <div class="consult__info">
                                 <div class="text24 _fade font2 extra-bold-text uppercase-text">
                                     We know you’re busy!
