--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                                     <img src="img/offer-icon5.svg" alt="">
                                 </div>
                                 <div class="offer-item__info">
-                                    <div class="text15">Use a ready 3D design for carving your crowns or veneers from a single block of zirconia / E-max.</div>
+                                    <div class="text15">Use a ready 3D design for carving your crowns or veneers from a single block of zirconia / E-max</div>
                                 </div>
                             </div>
                             <div class="offer-item crown-item _fade">
@@ -371,7 +371,7 @@
 
                             <div class="warranty-card _fade">
     <div class="warranty-card__img">
-        <img src="img/warranty2.webp" alt="">
+        <img src="img/warranty5.webp" alt="">
     </div>
     <img src="img/warranty-badge2.svg" alt="" class="warranty-card__badge">
     <div class="warranty-card__content">
@@ -383,7 +383,7 @@
 
                             <div class="warranty-card _fade">
     <div class="warranty-card__img">
-        <img src="img/warranty3.webp" alt="">
+        <img src="img/warranty7.webp" alt="">
     </div>
     <img src="img/warranty-badge3.svg" alt="" class="warranty-card__badge">
     <div class="warranty-card__content">
@@ -395,7 +395,7 @@
 
                             <div class="warranty-card _fade">
     <div class="warranty-card__img">
-        <img src="img/warranty4.webp" alt="">
+        <img src="img/warranty6.webp" alt="">
     </div>
     <img src="img/warranty-badge4.svg" alt="" class="warranty-card__badge">
     <div class="warranty-card__content">
