--- a/about.html
+++ b/about.html
@@ -159,8 +159,8 @@
                         </svg>
 
                     </div>
-                    <img src="img/about-bg4.png" alt="" class="about-main__img _desktop">
-                    <img src="img/about-bg6.png" alt="" class="about-main__img _mob">
+                    <img src="img/about-bg4.webp" alt="" class="about-main__img _desktop">
+                    <img src="img/about-bg6.webp" alt="" class="about-main__img _mob">
                 </div>
                 <div class="breadcrumbs">
                     <div class="container">
