--- a/about.html
+++ b/about.html
@@ -98,68 +98,11 @@
                                 </div>
                             </div>
                         </div>
-                        <svg class="about-main__gradients" width="1440" height="627" viewBox="0 0 1440 627" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <rect width="1440" height="627" fill="#E4FAFD" fill-opacity="0.75"/>
-                            <rect width="1440" height="627" fill="#1B3140"/>
-                            <mask id="mask0_1_24" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="1440" height="627">
-                                <rect width="1440" height="627" fill="#E4FAFD" fill-opacity="0.9"/>
-                            </mask>
-                            <g mask="url(#mask0_1_24)">
-                                <g opacity="0.6" filter="url(#filter0_f_1_24)">
-                                    <circle cx="1038" cy="149" r="340" fill="url(#paint0_radial_1_24)"/>
-                                </g>
-                                <g filter="url(#filter1_f_1_24)">
-                                    <circle cx="816.5" cy="638.5" r="520.5" fill="#0DD2FD"/>
-                                </g>
-                                <g opacity="0.3" filter="url(#filter2_f_1_24)">
-                                    <circle cx="399" cy="578" r="306" fill="url(#paint1_radial_1_24)"/>
-                                </g>
-                                <g filter="url(#filter3_f_1_24)">
-                                    <circle cx="1280.5" cy="408.5" r="447.5" fill="#FB03D4"/>
-                                </g>
-                            </g>
-                            <defs>
-                                <filter id="filter0_f_1_24" x="397" y="-492" width="1282" height="1282" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
-                                    <feFlood flood-opacity="0" result="BackgroundImageFix"/>
-                                    <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape"/>
-                                    <feGaussianBlur stdDeviation="150.5" result="effect1_foregroundBlur_1_24"/>
-                                </filter>
-                                <filter id="filter1_f_1_24" x="-254" y="-432" width="2141" height="2141" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
-                                    <feFlood flood-opacity="0" result="BackgroundImageFix"/>
-                                    <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape"/>
-                                    <feGaussianBlur stdDeviation="275" result="effect1_foregroundBlur_1_24"/>
-                                </filter>
-                                <filter id="filter2_f_1_24" x="-207" y="-28" width="1212" height="1212" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
-                                    <feFlood flood-opacity="0" result="BackgroundImageFix"/>
-                                    <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape"/>
-                                    <feGaussianBlur stdDeviation="150" result="effect1_foregroundBlur_1_24"/>
-                                </filter>
-                                <filter id="filter3_f_1_24" x="283" y="-589" width="1995" height="1995" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
-                                    <feFlood flood-opacity="0" result="BackgroundImageFix"/>
-                                    <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape"/>
-                                    <feGaussianBlur stdDeviation="275" result="effect1_foregroundBlur_1_24"/>
-                                </filter>
-                                <radialGradient id="paint0_radial_1_24" cx="0" cy="0" r="1" gradientUnits="userSpaceOnUse" gradientTransform="translate(1038 149) rotate(90) scale(340)">
-                                    <stop stop-color="#FF365F">
-                                        <animate attributeName="stop-color" values="#FF365F; #FF64C3; #FF365F" dur="2.5s" repeatCount="indefinite"></animate>
-                                    </stop>
-                                    <stop offset="1" stop-color="#FF3661" stop-opacity="0">
-                                        <animate attributeName="stop-color" values="#FF3661; #FF64C3; #FF3661" dur="2.5s" repeatCount="indefinite"></animate>
-                                    </stop>
-                                </radialGradient>
-                                <radialGradient id="paint1_radial_1_24" cx="0" cy="0" r="1" gradientUnits="userSpaceOnUse" gradientTransform="translate(399 578) rotate(90) scale(306)">
-                                    <stop stop-color="#1470DB">
-                                        <animate attributeName="stop-color" values="#7A5FFF; #FF64C3; #7A5FFF" dur="2.5s" repeatCount="indefinite"></animate>
-                                    </stop>
-                                    <stop offset="1" stop-color="#1470DB" stop-opacity="0">
-                                        <animate attributeName="stop-color" values="#7A5FFF; #FF64C3; #7A5FFF" dur="2.5s" repeatCount="indefinite"></animate>
-                                    </stop>
-                                </radialGradient>
-                            </defs>
-                        </svg>
+                        
+                        <img src="img/about-bg8.svg" alt="" class="about-main__gradients">
 
                     </div>
-                    <img src="img/about-bg4.webp" alt="" class="about-main__img _desktop">
+                    <img src="img/about-bg7.webp" alt="" class="about-main__img _desktop">
                     <img src="img/about-bg6.webp" alt="" class="about-main__img _mob">
                 </div>
                 <div class="breadcrumbs">
