--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
                         <div class="warranty__grid">
                             <div class="warranty-card _fade">
     <div class="warranty-card__img">
-        <img src="img/warranty.webp" alt="">
+        <img src="img/warranty8.svg" alt="">
     </div>
     <img src="img/warranty-badge.svg" alt="" class="warranty-card__badge">
     <div class="warranty-card__content">
